
Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/jtag/altera
 jtag-device.bsv           Locally Added               0 

Added skeleton code for altera jtag device

----------
kfleming    Date: Wed Apr  7 14:18:03 EDT 2010  CSN: CSN-platforms-379
                  Wed Apr  7 18:18:03 UTC 2010


Directory modules/bluespec/common/fpgaenv/physical-platform/htg_virtex5/pcie-enabled
 xilinx.sdf                Locally Modified          378 

Directory modules/project
 Synplify.py               Locally Modified          378 

Fixed bug in synplify build.

----------
kfleming    Date: Wed Apr  7 14:22:39 EDT 2010  CSN: CSN-platforms-380
                  Wed Apr  7 18:22:39 UTC 2010


Directory modules/bluespec/common/fpgaenv/virtual-platform/channelio/physical-channel
 jtag/                     Locally Added               0 

Directory modules/bluespec/common/fpgaenv/virtual-platform/channelio/physical-channel/jtag
 jtag-physical-channel.cpp Locally Added               0 
 jtag-physical-channel.h   Locally Added               0 
 jtag-physical-channel.awb Locally Added               0 
 jtag-physical-channel.bsv Locally Added               0 


Added jtag phy channel code skeleton.  Impl not complete.

----------
kfleming    Date: Wed Apr  7 18:37:56 EDT 2010  CSN: CSN-platforms-381
                  Wed Apr  7 22:37:56 UTC 2010


Directory modules/bluespec/common/fpgaenv/virtual-platform/channelio/physical-channel/jtag
 jtag-physical-channel.cpp Locally Modified          380 
 jtag-physical-channel.h   Locally Modified          380 



Add Altera JTAG C code.  This code probably needs a robust way of shooting down NIOS 2 Terminal.

----------
kfleming    Date: Wed Apr  7 18:49:19 EDT 2010  CSN: CSN-platforms-382
                  Wed Apr  7 22:49:19 UTC 2010


Directory modules/bluespec/common/fpgaenv/virtual-platform/channelio/physical-channel/jtag
 jtag-physical-channel.h   Locally Modified          381 

Fixed compilation error