@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-382
+CSN=CSN-platforms-388
 Dependencies=hasim/HEAD
